Fix layout bug when accessing through the mobile app.

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -11,7 +11,13 @@
 
 .task-title {
     cursor: pointer;
-    width: 80%;
+    min-width: 70%;
+}
+
+.buttons-container {
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .remove-task-button,
